# pre-commit-workshop

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  pyproject.toml
src/filename_validation/: __init__.py  cli.py
src/your_pkg/: __init__.py  example.py  your_module.py
