[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "filename-validation"
version = "0.1.0"
authors = [
  {name = "Stefanie Molin", email = "email@example.com"},
]
description = "Validates that filenames meet criteria."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python"
]

dependencies = []
requires-python = ">=3.8"
optional-dependencies.dev = [
    "pre-commit",
    "pytest",
]

scripts.validate-filename = "filename_validation.cli:main"

[project.urls]
Homepage = "https://github.com/stefmolin/validate-filename"
Documentation = "https://stefaniemolin.com/validate-filename"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear rules
    "C", # mccabe rules
    "E", # pycodestyle error rules
    "F", # pyflakes rules
    "I", # isort rules
    "W", # pycodestyle warning rules
]
ignore = [
    "C901", # max-complexity-10
    "E501", # line-too-long
]

[tool.numpydoc_validation]
checks = [
    "all", # all checks except for the ones listed below
    "ES01", # No extended summary found
    "EX01", # No examples section found
    "SA01", # See Also section not found
    "SS06", # Summary should fit in a single line
]
